# cargo-public-api-crates

./: CHANGELOG.md  Cargo.toml  README.md
src/: analyze.rs  build_docs.rs  check.rs  main.rs  output.rs  visit.rs
src/output/: mod.rs  writer.rs
