[package]
name = "cargo-public-api-crates"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
] }
glob = "0.3.1"
itertools = "0.10.5"
rustdoc-types = "0.22.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
toml = "0.7.2"
